--- a/app/views/players/index.html.haml
+++ b/app/views/players/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Listing players
 
-%table
+%table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
     %th First name
     %th Last name
