--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Listing teams
 
-%table
+%table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
     %th Name
     %th Balance
