--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -7,7 +7,7 @@
   %b Balance:
   = @team.balance
 
-%table
+%table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
     %th
     %th
@@ -26,8 +26,6 @@
     %th
     %th
     %th Physical
-    %th
-    %th
     %th
 
   %tr
