--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="main-container" class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <%= render 'shared/navigation' %>
+        <div class="row">
+          <div class="col-md-8">
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
