--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,15 +6,10 @@
     #error_explanation
       %h2
         = pluralize(@signup.errors.count, "error")
-        prohibited this company from being saved:
+        prohibited user from being saved:
       %ul
         - @signup.errors.full_messages.each do |message|
           %li= message
-  .form-group.row
-    .col-md-4
-      = f.label :team_name, :class => "control-label"
-    .col-md-8
-      = f.text_field :team_name, :class => "form-control"
   .form-group.row
     .col-md-4
       = f.label :email, :class => "control-label"
@@ -30,6 +25,11 @@
       = f.label :password_confirmation, :class => "control-label"
     .col-md-8
       = f.password_field :password_confirmation, :class => "form-control"
+  .form-group.row
+    .col-md-4
+      = f.label :team_name, :class => "control-label"
+    .col-md-8
+      = f.text_field :team_name, :class => "form-control"
   .form-group.row
     .col-sm-offset-2.col-md-6
       = f.submit "Signup", :class => "btn-lg"
