--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -18,13 +18,17 @@
       <% if current_user %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <%= link_to 'Sign out', destroy_user_session_path, :method => "delete" %>
+            <%= link_to destroy_user_session_path, :method => "delete" do %>
+              <i class="glyphicon glyphicon-log-out"></i> Sign out
+            <% end %>
           </li>
         </ul>
       <% else %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <%= link_to 'Sign in', new_user_session_path %>
+            <%= link_to new_user_session_path  do%>
+              <i class="glyphicon glyphicon-log-in"></i> Sign in
+            <% end %>
           </li>
         </ul>
       <% end %>
