Team logos (avatars) added

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -31,12 +31,9 @@
   %b Skills:
   %table.table.table-bordered.table-condensed
     %tr
-      %th Technical
-      %th
-      %th Mental
-      %th
-      %th Physical
-      %th
+      %th{:colspan => 2} Mental
+      %th{:colspan => 2} Technical
+      %th{:colspan => 2} Physical
 
     %tr
       %td Reflex
