--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -29,3 +29,13 @@ img
 .field_with_errors
   @extend .control-group
   @extend .error
+
+.pitch_background
+  background-image: url("pitch.jpg")
+
+.col-centered
+  float: none
+  margin: 0 auto
+
+.big-vertical-padding
+  padding: 30px 0
