--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,6 +12,9 @@
         <li>
           <%= link_to 'Teams', teams_path %>
         </li>
+        <li>
+          <%= link_to 'Matches', matches_path %>
+        </li>
       </ul>
       <% end %>
 
