Match model added.

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -37,37 +37,37 @@
 
     %tr
       %td Reflex
-      %td= @player.reflex
+      %td= @player.reflex / 100
       %td Handling
-      %td= @player.handling
+      %td= @player.handling / 100
       %td Condition
-      %td= @player.condition
+      %td= @player.condition / 100
     %tr
       %td Discipline
-      %td= @player.discipline
+      %td= @player.discipline / 100
       %td Tackling
-      %td= @player.tackling
+      %td= @player.tackling / 100
       %td
       %td
     %tr
       %td Work rate
-      %td= @player.work_rate
+      %td= @player.work_rate / 100
       %td Positioning
-      %td= @player.positioning
+      %td= @player.positioning / 100
       %td
       %td
     %tr
       %td Creativity
-      %td= @player.creativity
+      %td= @player.creativity / 100
       %td Technique
-      %td= @player.technique
+      %td= @player.technique / 100
       %td
       %td
     %tr
       %td Instinct
-      %td= @player.instinct
+      %td= @player.instinct / 100
       %td Shots
-      %td= @player.shots
+      %td= @player.shots / 100
       %td
       %td
 
