--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -13,7 +13,7 @@
           <%= link_to 'Teams', teams_path %>
         </li>
         <li>
-          <%= link_to 'Matches', matches_path %>
+          <%= link_to 'New match', new_match_path %>
         </li>
       </ul>
       <% end %>
