--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -53,6 +53,10 @@
       %th Salary
       %th Goals
       %th Assists
+      %th Yellow cards
+      %th Double yellow cards
+      %th Red cards
+      %th Injuries
 
     - @team.players.each do |player|
       %tr
@@ -67,6 +71,10 @@
         %td= player.salary
         %td= MatchEvent.where(:event_type => "goal", :first_player => player).count
         %td= MatchEvent.where(:event_type => "goal", :second_player => player).count
+        %td= MatchEvent.where(:event_type => "yellow card", :first_player => player).count
+        %td= MatchEvent.where(:event_type => "double yellow card", :first_player => player).count
+        %td= MatchEvent.where(:event_type => "red card", :first_player => player).count
+        %td= MatchEvent.where(:event_type => "injury", :first_player => player).count
 
 -if @team.user == current_user
   %p
