Pitch background fills div

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -31,7 +31,8 @@ img
   @extend .error
 
 .pitch_background
-  background-image: url("pitch.jpg")
+  background: url("pitch.jpg") no-repeat
+  background-size: 100%
 
 .col-centered
   float: none
