--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,3 +1,6 @@
+%center
+  %iframe{:allowfullscreen => "", :frameborder => "0", :height => "315", :src => "https://www.youtube.com/embed/TT8e7i0ccLQ", :width => "560"}
+
 .row
   .col-md-6
     %h1
@@ -33,7 +36,7 @@
         .col-md-8
           = f.text_field :team_name, :class => "form-control"
       .form-group.row
-        .col-md-4
+        .col-md-12
           = f.submit "Sign up", :class => "btn-lg"
   .col-md-6
     %h1
@@ -55,6 +58,8 @@
         .col-md-8
           = f.check_box :remember_me, :class => "form-control"
       .form-group.row
-        = f.submit 'Sign in', :class => "btn-lg"
+        .col-md-12
+          = f.submit 'Sign in', :class => "btn-lg"
       .form-group.row
-        = link_to "Forgot your password?", new_password_path(:user)
+        .col-md-12
+          = link_to "Forgot your password?", new_password_path(:user)
