--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,28 +1,14 @@
 %p#notice= notice
 
-%p
-  -if @team.logo.present?
-    =image_tag @team.logo
-  -else
-    =image_tag @team.logo.default_url
-
-%p
-  %b Change logo
-  = form_for @team, :url => team_path(@team), :method => :patch do |f|
-    - if @team.errors.any?
-      #error_explanation
-        %h2= "#{pluralize(@team.errors.count, "error")} prohibited this logo from being saved:"
-        %ul
-          - @team.errors.full_messages.each do |msg|
-            %li= msg
-
-    .field
-      = f.file_field :logo
-    .actions
-      = f.submit 'Upload'
-
-%h1
-  = @team.name
+.row
+  .col-md-3
+    %p
+      -if @team.logo.present?
+        =image_tag @team.logo
+      -else
+        =image_tag @team.logo.default_url
+  .col-md-9.team-name
+    = @team.name
 
 -if @team.user == current_user
   %p
