Match model tests added. Some junk model tests removed.

--- a/app/views/matches/show.html.haml
+++ b/app/views/matches/show.html.haml
@@ -42,7 +42,7 @@
       %th Minute
       %th Description
 
-    - @match.match_events.order(:time).each do |event|
+    - @match.events.each do |event|
       %tr
         %td= event.event_type
         %td
