--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -16,8 +16,8 @@
       %td= team.name
       %td= team.balance
       %td= team.user.email
-      %td= team.defensive_power
-      %td= team.offensive_power
+      %td= team.tactic.defensive_power
+      %td= team.tactic.offensive_power
       %td= link_to 'Show', team
       %td= link_to 'Edit', edit_team_path(team)
       %td= link_to 'Destroy', team, :method => :delete, :data => { :confirm => 'Are you sure?' }
