Admin panel designed

--- a/app/views/admin/double_yellow_card_descriptions/index.html.haml
+++ b/app/views/admin/double_yellow_card_descriptions/index.html.haml
@@ -1,6 +1,6 @@
-%h1 Listing double_yellow_card_descriptions
+%h1 Listing Double Yellow Card Description
 
-%table
+%table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
     %th Description
     %th
@@ -17,3 +17,5 @@
 %br
 
 = link_to 'New Double yellow card description', new_admin_double_yellow_card_description_path
+%br
+= link_to 'Back to admin panel', admin_path
