--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -1,11 +1,31 @@
 .page-header
   %h1 Admin panel
 
-%h3 Events descriptions:
-%ul.list-group
-  %li.list-group-item= link_to 'Goal', admin_goal_descriptions_path
-  %li.list-group-item= link_to 'Solo goal', admin_solo_goal_descriptions_path
-  %li.list-group-item= link_to 'Yellow card', admin_yellow_card_descriptions_path
-  %li.list-group-item= link_to 'Double yellow card', admin_double_yellow_card_descriptions_path
-  %li.list-group-item= link_to 'Red card', admin_red_card_descriptions_path
-  %li.list-group-item= link_to 'Injury', admin_injury_descriptions_path
+.row
+  .col-md-6
+    %h3 Events descriptions:
+    %ul.list-group
+      %li.list-group-item= link_to 'Goal', admin_goal_descriptions_path
+      %li.list-group-item= link_to 'Solo goal', admin_solo_goal_descriptions_path
+      %li.list-group-item= link_to 'Yellow card', admin_yellow_card_descriptions_path
+      %li.list-group-item= link_to 'Double yellow card', admin_double_yellow_card_descriptions_path
+      %li.list-group-item= link_to 'Red card', admin_red_card_descriptions_path
+      %li.list-group-item= link_to 'Injury', admin_injury_descriptions_path
+  .col-md-6
+    %h3 Users:
+    %table.table.table-striped.table-bordered.table-hover.table-condensed
+      %tr
+        %th User
+        %th Team
+        %th Admin
+        %th Grant admin
+      -@users.each do |user|
+        %tr
+          %td= user
+          %td= link_to user.team.name, team_path(user.team)
+          %td
+            =user.admin?
+          %td
+            -unless user.admin?
+              =form_tag(admin_grant_path(user), method: :put) do
+                =submit_tag 'Grant admin'
