--- a/app/views/admin/injury_descriptions/index.html.haml
+++ b/app/views/admin/injury_descriptions/index.html.haml
@@ -1,6 +1,6 @@
-%h1 Listing injury_descriptions
+%h1 Listing Injury Description
 
-%table
+%table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
     %th Description
     %th
@@ -17,3 +17,5 @@
 %br
 
 = link_to 'New Injury description', new_admin_injury_description_path
+%br
+= link_to 'Back to admin panel', admin_path
