--- a/app/views/admin/red_card_descriptions/index.html.haml
+++ b/app/views/admin/red_card_descriptions/index.html.haml
@@ -1,6 +1,6 @@
-%h1 Listing red_card_descriptions
+%h1 Listing Red Card Description
 
-%table
+%table.table.table-striped.table-bordered.table-hover.table-condensed
   %tr
     %th Description
     %th
@@ -17,3 +17,5 @@
 %br
 
 = link_to 'New Red card description', new_admin_red_card_description_path
+%br
+= link_to 'Back to admin panel', admin_path
