--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -12,11 +12,11 @@
         <li id="teams-tab">
           <%= link_to 'Teams', teams_path %>
         </li>
-        <li id="new-match-tab">
+        <li id="play-match-tab">
           <%= link_to 'Play match', play_match_path %>
         </li>
         <% if current_user.admin? %>
-          <li id="new-match-tab">
+          <li id="admin-tab">
             <%= link_to 'Admin panel', admin_path %>
           </li>
         <% end %>
