--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,65 +1,65 @@
 %center
-  %iframe{:allowfullscreen => "", :frameborder => "0", :height => "315", :src => "https://www.youtube.com/embed/TT8e7i0ccLQ", :width => "560"}
+  %iframe{:allowfullscreen => '', :frameborder => '0', :height => '315', :src => 'https://www.youtube.com/embed/TT8e7i0ccLQ', :width => '560'}
 
 .row
   .col-md-6
     %h1
       Register for free
 
-    = form_for(@signup, :html => {:role => "form", :class => "form-horizontal"}) do |f|
+    = form_for(@signup, :html => {:role => 'form', :class =>' "form-horizontal"'}) do |f|
       - if @signup.errors.any?
         #error_explanation
           %h2
-            = pluralize(@signup.errors.count, "error")
+            = pluralize(@signup.errors.count, 'error')
             prohibited user from being saved:
           %ul
             - @signup.errors.full_messages.each do |message|
               %li= message
       .form-group.row
         .col-md-4
-          = f.label :email, :class => "control-label"
+          = f.label :email, :class => 'control-label'
         .col-md-8
-          = f.email_field :email, :class => "form-control"
+          = f.email_field :email, :class => 'form-control'
       .form-group.row
         .col-md-4
-          = f.label :password, :class => "control-label"
+          = f.label :password, :class => 'control-label'
         .col-md-8
-          = f.password_field :password, :class => "form-control"
+          = f.password_field :password, :class => 'form-control'
       .form-group.row
         .col-md-4
-          = f.label :password_confirmation, :class => "control-label"
+          = f.label :password_confirmation, :class => 'control-label'
         .col-md-8
-          = f.password_field :password_confirmation, :class => "form-control"
+          = f.password_field :password_confirmation, :class => 'form-control'
       .form-group.row
         .col-md-4
-          = f.label :team_name, :class => "control-label"
+          = f.label :team_name, :class => 'control-label'
         .col-md-8
-          = f.text_field :team_name, :class => "form-control"
+          = f.text_field :team_name, :class => 'form-control'
       .form-group.row
         .col-md-12
-          = f.submit "Sign up", :class => "btn-lg"
+          = f.submit 'Sign up', :class => 'btn-lg'
   .col-md-6
     %h1
       ='...or log in'
-    = form_for(:user, :url => session_path(:user), :html => {:role => "form", :class => "form-horizontal"}) do |f|
+    = form_for(:user, :url => session_path(:user), :html => {:role => 'form', :class => 'form-horizontal'}) do |f|
       .form-group.row
         .col-md-4
-          = f.label :email, :class => "control-label"
+          = f.label :email, :class => 'control-label'
         .col-md-8
-          = f.text_field :email, :class => "form-control"
+          = f.text_field :email, :class => 'form-control'
       .form-group.row
         .col-md-4
-          = f.label :password, :class => "control-label"
+          = f.label :password, :class => 'control-label'
         .col-md-8
-          = f.password_field :password, :class => "form-control"
+          = f.password_field :password, :class => 'form-control'
       .form-group.row
         .col-md-4
-          = f.label :remember_me, :class => "control-label"
+          = f.label :remember_me, :class => 'control-label'
         .col-md-8
-          = f.check_box :remember_me, :class => "form-control"
+          = f.check_box :remember_me, :class => 'form-control'
       .form-group.row
         .col-md-12
-          = f.submit 'Sign in', :class => "btn-lg"
+          = f.submit 'Sign in', :class => 'btn-lg'
       .form-group.row
         .col-md-12
-          = link_to "Forgot your password?", new_password_path(:user)
+          = link_to 'Forgot your password?', new_password_path(:user)
