--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -31,7 +31,7 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-      <% if current_user.admin? %>
+      <% if current_user && current_user.admin? %>
         <li id="admin-tab">
           <%= link_to 'Admin panel', admin_path %>
         </li>
