--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -31,7 +31,7 @@ img
   @extend .error
 
 .pitch_background
-  background: url("pitch.jpg") no-repeat
+  background: url("pitch.png") no-repeat
   background-size: 100%
 
 .col-centered
@@ -39,7 +39,7 @@ img
   margin: 0 auto
 
 .big-vertical-padding
-  padding: 30px 0
+  padding: 40px 0
 
 .score
   font-size: 500%
