--- a/app/views/teams/finance.html.haml
+++ b/app/views/teams/finance.html.haml
@@ -1,5 +1,8 @@
-%p
-  =image_tag @team.logo_micro_path
-  %i.glyphicon.glyphicon-usd
+.page-header
+  %h1
+    %i.glyphicon.glyphicon-usd
+    Finance
+%h4
+  %i.glyphicon.glyphicon-transfer
   %b Balance:
-  = @team.balance
+  =@team.balance
