--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -4,29 +4,31 @@
       <%= link_to 'Play Ball', root_path, :class => 'navbar-brand' %>
     </div>
     <div>
-      <% if current_user %>
-      <ul class="nav navbar-nav">
-        <li id="my-team-tab" class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">My team<span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <%= link_to 'Overview', my_team_path %>
-            </li>
-            <li>
-              <%= link_to 'Players', players_path %>
-            </li>
-            <li>
-              <%= link_to 'Tactic', tactic_path %>
-            </li>
-            <li>
-              <%= link_to 'Stadium', stadium_path %>
-            </li>
-            <li>
-              <%= link_to 'Finance', finance_path %>
-            </li>
-          </ul>
-        </li>
-      </ul>
+        <% if current_user %>
+        <ul class="nav navbar-nav">
+          <li id="my-team-tab" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              <%= current_user.team.name %><span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <%= link_to 'Overview', my_team_path %>
+              </li>
+              <li>
+                <%= link_to 'Players', players_path %>
+              </li>
+              <li>
+                <%= link_to 'Tactic', tactic_path %>
+              </li>
+              <li>
+                <%= link_to 'Stadium', stadium_path %>
+              </li>
+              <li>
+                <%= link_to 'Finance', finance_path %>
+              </li>
+            </ul>
+          </li>
+        </ul>
       <% end %>
 
 
