League scaffold improved

--- a/app/views/players/show.html.haml
+++ b/app/views/players/show.html.haml
@@ -1,7 +1,8 @@
-%h2
-  %i.glyphicon.glyphicon-user
-  = @player.first_name
-  = @player.last_name
+.page-header
+  %h1
+    %i.glyphicon.glyphicon-user
+    = @player.first_name
+    = @player.last_name
 
 .row
   .col-md-3
