--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -28,6 +28,9 @@
               </li>
             </ul>
           </li>
+          <li id="leagues-tab">
+            <%= link_to 'Leagues', list_leagues_path %>
+          </li>
         </ul>
       <% end %>
 
