--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -28,8 +28,8 @@
               </li>
             </ul>
           </li>
-          <li id="leagues-tab">
-            <%= link_to 'Leagues', list_leagues_path %>
+          <li id="league-tab">
+            <%= link_to 'League', league_path %>
           </li>
         </ul>
       <% end %>
